corrigindo caminhos para github

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                                 </div>
                                 
                                 <div id="projects" class="card-body d-flex flex-column align-items-center ps-4 gap-1">
-                                    <a href="/supervisório.html" class="project-link">
+                                    <a href="supervisório.html" class="project-link">
                                         <i class="fa-solid fa-industry fa-fw"></i>
                                         <span>Supervisório de Máquinas</span>
                                     </a>
-                                    <a href="/coletor.html" class="project-link">
+                                    <a href="coletor.html" class="project-link">
                                         <i class="fa-regular fa-file-code fa-fw"></i>
                                         <span>Pdf to Excel data converter</span>
                                     </a>
