upload para o github atualziado

--- a/supervisório.html
+++ b/supervisório.html
@@ -93,7 +93,7 @@
 
                 <div class="col-md-11 mt-5">
                     <div class="ratio ratio-16x9">
-                        <iframe src="/img/videoprojeto.mp4" allowfullscreen class="rounded"></iframe>
+                        <iframe src="img/videoprojeto.mp4" allowfullscreen class="rounded"></iframe>
                     </div>
                 </div>
             </div>
