--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 </div>
                                 
                                 <div id="projects" class="card-body d-flex flex-column align-items-center ps-4 gap-1">
-                                    <a href="supervisório.html" class="project-link"> 
+                                    <a href="supervisorio.html" class="project-link"> 
                                         <i class="fa-solid fa-industry fa-fw"></i>
                                         <span>Supervisório de Máquinas</span>
                                     </a>
