correção feitas dia 17/07

--- a/conversor.html
+++ b/conversor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giovanni Camilo DEV projeto Coletor</title>
 
-    <link rel="stylesheet" href="supervisorio.css">
+    <link rel="stylesheet" href="static/css/conversor.css">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
                     </div>
 
                 
-                    <div class="card mt-4">
+                    <div class="card mt-4" style="overflow:hidden;">
                         <div class="card-body" style="height:370px">
                             <h5 class="card-title">About the project</h5>
                             <p class="card-text">
@@ -43,15 +43,13 @@
                                 The tool drastically reduces the time spent on manual tasks, ensuring greater speed, accuracy, and consistency in reports.
                             </p>
 
-                            <p>
-                                Libraries and tools:<br>
-                               <span class="badge text-bg-success">Pandas</span>
-                               <span class="badge text-bg-success">Openpyxl</span>
-                               <span class="badge text-bg-success">Tkinter</span>
-                               <span class="badge text-bg-success">Excel</span>
-                               <span class="badge text-bg-success">PyPDF2</span>
-
-                            </p>
+                            <div class="tools-container mt-3">
+                                <span class="badge text-bg-success">Pandas</span>
+                                <span class="badge text-bg-success">Openpyxl</span>
+                                <span class="badge text-bg-success">Tkinter</span>
+                                <span class="badge text-bg-success">Excel</span>
+                                <span class="badge text-bg-success">PyPDF2</span>
+                            </div>
                         </div>
                         
                     </div>
