--- a/supervisorio.html
+++ b/supervisorio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="supervisorio.css">
+    <link rel="stylesheet" href="static/css/supervisorio.css">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -79,7 +79,7 @@
             <div class="row d-flex justify-content-center">
 
                 <div class="col-md-11 mt-2">
-                    <h5 class="card-title mt-4 d-flex justify-content-center" style="font-size:2rem; color: white">Tools and languages used</h5>
+                    <h5 class="card-title mt-4 d-flex justify-content-center" style="font-size:2rem; color: white">Languages and tools</h5>
                             <br><p class="d-flex justify-content-center gap-3" id="tecnologias">
                                <i class="fa-brands fa-html5"></i>
                                <i class="fa-brands fa-css3-alt"></i>
@@ -90,12 +90,13 @@
                                <i class="fa-brands fa-github"></i>
                                <i class="fa-brands fa-figma"></i>
                 </div>
-
-                <div class="col-md-11 mt-5">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="img/videoprojeto.mp4" allowfullscreen class="rounded"></iframe>
+                
+                    <div class="col-md-11 mt-5">
+                        <div class="ratio ratio-16x9">
+                            <iframe src="img/videoprojeto.mp4" allowfullscreen class="rounded"></iframe>
+                        </div>
                     </div>
-                </div>
+                
             </div>
 
 
