--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                                     <a href="https://www.linkedin.com/in/giovanni-camilo-310935151/" target="_blank"><i class="fa-brands fa-linkedin" id="linkedin"></i></a>
                                     <a href="mailto:giocamilodev@gmail.com" target="_blank"><i class="fa-solid fa-envelope" id="email"></i></a>
                                     <a href="https://github.com/GioCamilo" target="_blank"><i class="fa-brands fa-github"></i></a>
+                                    <a href="orcamentos.html" target="_blank"><i class="fa-solid fa-lightbulb"></i></a>
                                 </div>
                             </div>
 
