--- a/orcamentos.html
+++ b/orcamentos.html
@@ -30,6 +30,8 @@
               <input type="text" name="telefone" class="form-control mb-3" placeholder="Telefone" required>
               <textarea name="mensagem" class="form-control mb-3" rows="3" placeholder="Descreva sua demanda..." required></textarea>
               <button type="submit" class="btn btn-primary">Enviar</button>
+              <p id="statusMsg" class="mt-3"></p>
+
             </form>
 
 
@@ -40,6 +42,9 @@
         
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
     <script src="../static/js/orcamento.js"></script>
+    
+
 </body>
 </html>
