--- a/index.html
+++ b/index.html
@@ -105,11 +105,14 @@
                                 </div>
 
                                 <div class="card-body d-flex justify-content-center gap-3" id="contact-body">
+                                    
                                     <a href="https://www.linkedin.com/in/giovanni-camilo-310935151/" target="_blank"><i class="fa-brands fa-linkedin" id="linkedin"></i></a>
                                     <a href="mailto:giocamilodev@gmail.com" target="_blank"><i class="fa-solid fa-envelope" id="email"></i></a>
                                     <a href="https://github.com/GioCamilo" target="_blank"><i class="fa-brands fa-github"></i></a>                                
                                 </div>
-
+                                <div class="card-footer d-flex justify-content-center">
+                                    <p class="card-text text-center card-title-custom" id="email-footer"><a href="orcamento.html">Faça um Orçamento!</a></p>
+                                </div>
                             </div>                        
                         </div>
                     </div>
