--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <a href="https://github.com/GioCamilo" target="_blank"><i class="fa-brands fa-github"></i></a>                                
                                 </div>
                                 <div class="card-footer d-flex justify-content-center">
-                                    <p class="card-text text-center card-title-custom" id="email-footer"><a href="orcamento.html">Faça um Orçamento!</a></p>
+                                    <p class="card-text text-center card-title-custom" id="email-footer"><a href="orcamentos.html">Faça um Orçamento!</a></p>
                                 </div>
                             </div>                        
                         </div>
