--- a/orcamentos.html
+++ b/orcamentos.html
@@ -49,7 +49,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- SDK do EmailJS (deve vir ANTES do seu JS) -->
-  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3.6.2/dist/email.min.js"></script>
+
 
   <!-- Seu script de envio -->
   <script src="static/js/orcamento.js"></script>
