--- a/escopos.html
+++ b/escopos.html
@@ -67,6 +67,8 @@
                         
                     </div>
 
+                    </div>
+
                     <div class="col-md-8 mt-4">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
